<resources>
    <string name="app_name">lifeSync</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Shake to start calculate steps test</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome,</string>
    <string name="sophia_muller">Sophia Muller 🥰</string>
    <string name="dash">-</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="my_activity">My Activity</string>
    <string name="menu">Menu</string>
    <string name="add_activity">Add activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_lifesync">Welcome to lifeSync .</string>
    <string name="what_s_your_height">What`s your height ?</string>
    <string name="what_s_your_weight">What`s your weight ?</string>
    <string name="what_s_your_age">What`s your age ?</string>
    <string name="hurray">HURRAY ! 🎉</string>
    <string name="let_s_get_you_settled_in">Let`s get you settled in !</string>
    <string name="type_your_name_here">Type your name here …</string>
    <string name="type_your_height_here">Type your height here …</string>
    <string name="type_your_weight_here">Type your weight here …</string>
    <string name="sync_your_life_let_s_begin">Sync Your Life: Let\'s Begin !</string>
    <string name="type_your_age_here">Type your age here …</string>
    <string name="what_s_your_name">What`s your name ?</string>
    <string name="spinner">spinner</string>
</resources>